--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "python3 -m http.server 3000"
   },
   "keywords": ["vehicle", "inspection", "dstv", "tanzania"],
-  "author": "Your Name",
+  "author": "David Mbazza",
   "license": "MIT",
   "devDependencies": {
     "@vercel/static-build": "^1.0.0"
